# uimacpp

./: CMakeLists.txt  configure  configure.ac  libtool  readme.txt
examples/descriptors/: DaveDetector.xml
examples/src/: CMakeLists.txt  DaveDetector.cpp  ExampleApplication.cpp  SofaExampleAnnotator.cpp
include/: CMakeLists.txt
include/apr-1/: CMakeLists.txt  apr.h  apr_general.h
include/back/uima/: annotator.hpp  annotator_context.hpp  capability.hpp  casdefinition.hpp  caswriter_abase.hpp  config_param.hpp  config_tools.hpp  endian.h1  engine.hpp  exceptions.hpp  importdescription.hpp  internal_aggregate_engine.hpp  internal_jedii_engine.hpp  language.hpp  log.hpp  lowlevel_fsheap.hpp  lowlevel_indexdefinition.hpp  lowlevel_typesystem.hpp  res_abase.hpp  res_annotator.hpp  resmgr.hpp  result_specification.hpp  taespecifier.hpp  typenamespace.hpp  typesystem.hpp  typesystemdescription.hpp  unistrref.hpp
include/back/uima/back/: cas.hpp
include/unicode/: CMakeLists.txt  brkiter.h  caniter.h  chariter.h  choicfmt.h  fmtable.h  format.h  locid.h  normlzr.h  numfmt.h  platform.h  rbnf.h  regex.h  resbund.h  search.h  sortkey.h  strenum.h  timezone.h  translit.h  ucurr.h  udata.h  uiter.h  umachine.h  uniset.h  unistr1.h  unorm.h  urep.h  ures.h  usetiter.h  ustream.h  ustring.h  utext.h  utf8.h  utrace.h  utypes.h  uversion.h
include/unicode/back/: help.h
include/unicode/sources/: cstring.h  locmap.c  putil.c  ubidi_props.c  ubidi_props.h  ubidi_props_data.c  ucase.c  ucase.h  ucase_props_data.c  uchar_props_data.c  ucln_cmn.c  ucmndata.c  ucmndata.h  ucnv.c  ucnv2022.c  ucnv_bld.c  ucnv_ext.h  ucnv_io.c  ucnv_lmb.c  ucnvmbcs.c  ucnvmbcs.h  udata.c  udatamem.c  udatamem.h  udataswp.c  umapfile.c  unistr.cpp  unistr_cnv.cpp  unistr_props.cpp  unormimp.h  uprops.c  ustring.c  utf_impl.c  utrace.c  utracimp.h  utrie.c  utrie.h
lib/: base.mak  libapr-1.la  libaprutil-1.so.0.3.8  libicui18n.so.36.0  libicuio.so.36  libicuio.so.52.1  libicuuc.so.36  libxerces-c.so.28.0
src/: CMakeLists.txt  ba
src/cas/: cas.cpp  featurestructure.cpp  fsfilterbuilder.cpp  fsindexrepository.cpp  internal_casdeserializer.cpp  internal_casserializer.cpp  lowlevel_fsheap.cpp  lowlevel_typesystem.cpp  sofastream.cpp  typenamespace.cpp  typesystem.cpp  xcasdeserializer_handler.cpp  xmideserializer.cpp  xmideserializer_handler.cpp  xmiwriter.cpp  xmltypesystemreader.cpp  xmlwriter.cpp
src/cas/uima/: cas.hpp  featurestructure.hpp  fsindexrepository.hpp  internal_casserializer.hpp  internal_serializedcas.hpp  lowlevel_fsheap.hpp  sofaid.hpp  sofastreamhandler.hpp  type_or_feature.hpp  typesystem.hpp  xmideserializer_handler.hpp  xmishareddata.hpp  xmltypesystemreader.hpp  xmlwriter.hpp
src/framework/: annotator.cpp  annotator_context.cpp  annotator_mgr.cpp  casdefinition.cpp  config_param.cpp  dottypesystemwriter.cpp  engine.cpp  exceptions.cpp  internal_aggregate_engine.cpp  internal_capability_container.cpp  internal_engine_base.cpp  internal_jedii_engine.cpp  internal_primitive_engine.cpp  language.cpp  log.cpp  res_abase.cpp  res_annotator.cpp  resmgr.cpp  taespecifier.cpp  taespecifierbuilder.cpp  token_properties.cpp  typesystemdescription.cpp  unistrref.cpp
src/framework/uima/: annotator.hpp  annotator_abase.hpp  annotator_api.h  annotator_aux.hpp  annotator_context.hpp  annotator_mgr.hpp  annotator_timing.hpp  assertmsg.h  capability.hpp  casdefinition.hpp  casiterator.hpp  caspool.hpp  caswriter_abase.hpp  ccsid.hpp  comp_ids.h  config_param.hpp  config_tools.hpp  configure.h  consoleui.hpp  cp2ucnvrt.hpp  dirwalk.hpp  dllfile.hpp  dottypesystemwriter.hpp  endian1.h  engine.hpp  engine_state.hpp  envvar.hpp  err_ids.h  exceptions.hpp  filename.hpp  ftools.hpp  importdescription.hpp  internal_aggregate_engine.hpp  internal_capability_container.hpp  internal_engine_base.hpp  internal_jedii_engine.hpp  internal_primitive_engine.hpp  language.hpp  location.hpp  log.hpp  (+14 more)
src/jni/: jni.cpp  jni_utils.cpp
src/jni/uima/: jni_utils.hpp
src/test/src/: annotator_dump.cpp  test_cas.cpp  test_engine.cpp  test_iterators.cpp  test_language.cpp  test_primitivetypes.cpp  test_typepriority.cpp  test_xmideserialization.cpp
src/test/src/uima/: parse_handlers.hpp  parser_config.hpp
src/utils/: ActiveMQAnalysisEngineService.cpp  runAECpp.cpp
